{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 37,
  "lineage": "ca2f59e3-a8f4-f4fb-b181-55f8b356ba8d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec11",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:033746436249:instance/i-0347537dca94667c7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0347537dca94667c7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09810519d046c32c2",
            "private_dns": "ip-10-0-4-44.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.44",
            "public_dns": "ec2-3-239-99-249.compute-1.amazonaws.com",
            "public_ip": "3.239.99.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0894c27b7a69f7cb4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0f9b3ac5a3cf1d30b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cc35c23e3efb2142",
            "tags": {
              "Name": "server1"
            },
            "tags_all": {
              "Name": "server1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f9b3ac5a3cf1d30b"
            ]
          },
          "dependencies": [
            "aws_security_group.allow",
            "aws_subnet.mysubnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:033746436249:instance/i-0a7c13696dec9e66f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a7c13696dec9e66f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a092abaead09951e",
            "private_dns": "ip-10-0-4-81.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.81",
            "public_dns": "ec2-3-229-130-0.compute-1.amazonaws.com",
            "public_ip": "3.229.130.0",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cef9214352882e69",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0f9b3ac5a3cf1d30b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cc35c23e3efb2142",
            "tags": {
              "Name": "server0"
            },
            "tags_all": {
              "Name": "server0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f9b3ac5a3cf1d30b"
            ]
          },
          "dependencies": [
            "aws_security_group.allow",
            "aws_subnet.mysubnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033746436249:internet-gateway/igw-0713205ab799a2e7c",
            "id": "igw-0713205ab799a2e7c",
            "owner_id": "033746436249",
            "tags": {
              "Name": "mygateway"
            },
            "tags_all": {
              "Name": "mygateway"
            },
            "vpc_id": "vpc-004d8629124c978b1"
          },
          "dependencies": [
            "aws_vpc.shubvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "MYlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:033746436249:loadbalancer/app/Mylb/ed62b251d8ae5e63",
            "arn_suffix": "app/Mylb/ed62b251d8ae5e63",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Mylb-729759730.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:033746436249:loadbalancer/app/Mylb/ed62b251d8ae5e63",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Mylb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f9b3ac5a3cf1d30b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0af643d33a8869f06"
              },
              {
                "subnet_id": "subnet-0cc35c23e3efb2142"
              }
            ],
            "subnets": [
              "subnet-0af643d33a8869f06",
              "subnet-0cc35c23e3efb2142"
            ],
            "tags": {
              "Name": "MYlb"
            },
            "tags_all": {
              "Name": "MYlb"
            },
            "vpc_id": "vpc-004d8629124c978b1",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow",
            "aws_subnet.mysubnet1",
            "aws_subnet.mysubnet2",
            "aws_vpc.shubvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:033746436249:listener/app/Mylb/ed62b251d8ae5e63/df89d4e489d801a7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:033746436249:targetgroup/TG/62a54ff82f38526d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:033746436249:listener/app/Mylb/ed62b251d8ae5e63/df89d4e489d801a7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:033746436249:loadbalancer/app/Mylb/ed62b251d8ae5e63",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.MYlb",
            "aws_lb_target_group.TG",
            "aws_security_group.allow",
            "aws_subnet.mysubnet1",
            "aws_subnet.mysubnet2",
            "aws_vpc.shubvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:033746436249:targetgroup/TG/62a54ff82f38526d",
            "arn_suffix": "targetgroup/TG/62a54ff82f38526d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:033746436249:targetgroup/TG/62a54ff82f38526d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-004d8629124c978b1"
          },
          "dependencies": [
            "aws_vpc.shubvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "apache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:033746436249:targetgroup/TG/62a54ff82f38526d-20221103070227430600000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:033746436249:targetgroup/TG/62a54ff82f38526d",
            "target_id": "i-0347537dca94667c7"
          },
          "dependencies": [
            "aws_instance.myec11",
            "aws_lb_target_group.TG",
            "aws_security_group.allow",
            "aws_subnet.mysubnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:033746436249:targetgroup/TG/62a54ff82f38526d-20221103070259194800000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:033746436249:targetgroup/TG/62a54ff82f38526d",
            "target_id": "i-0a7c13696dec9e66f"
          },
          "dependencies": [
            "aws_instance.myec22",
            "aws_lb_target_group.TG",
            "aws_security_group.allow",
            "aws_subnet.mysubnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "shubham",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033746436249:route-table/rtb-0aa8873e07cc43fb1",
            "id": "rtb-0aa8873e07cc43fb1",
            "owner_id": "033746436249",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0713205ab799a2e7c",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0713205ab799a2e7c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shubham"
            },
            "tags_all": {
              "Name": "shubham"
            },
            "timeouts": null,
            "vpc_id": "vpc-004d8629124c978b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.shubvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c119533ac0289f51",
            "route_table_id": "rtb-0aa8873e07cc43fb1",
            "subnet_id": "subnet-0cc35c23e3efb2142"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.shubham",
            "aws_subnet.mysubnet1",
            "aws_vpc.shubvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033746436249:security-group/sg-0f9b3ac5a3cf1d30b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9b3ac5a3cf1d30b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow",
            "name_prefix": "",
            "owner_id": "033746436249",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow"
            },
            "tags_all": {
              "Name": "allow"
            },
            "timeouts": null,
            "vpc_id": "vpc-004d8629124c978b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.shubvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mysubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033746436249:subnet/subnet-0cc35c23e3efb2142",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc35c23e3efb2142",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "033746436249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mysubnet"
            },
            "tags_all": {
              "Name": "mysubnet"
            },
            "vpc_id": "vpc-004d8629124c978b1"
          },
          "dependencies": [
            "aws_vpc.shubvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mysubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033746436249:subnet/subnet-0af643d33a8869f06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af643d33a8869f06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "033746436249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mysubnet"
            },
            "tags_all": {
              "Name": "mysubnet"
            },
            "vpc_id": "vpc-004d8629124c978b1"
          },
          "dependencies": [
            "aws_vpc.shubvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "shubvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033746436249:vpc/vpc-004d8629124c978b1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-014618c382dbab635",
            "default_route_table_id": "rtb-027332bc22adfb38d",
            "default_security_group_id": "sg-00497235e83fbff88",
            "dhcp_options_id": "dopt-08d93a8f78bcd403b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": true,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-004d8629124c978b1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-027332bc22adfb38d",
            "owner_id": "033746436249",
            "tags": {
              "Name": "teraform"
            },
            "tags_all": {
              "Name": "teraform"
            }
          }
        }
      ]
    }
  ]
}